--- a/itproger/main/templates/main/layout.html
+++ b/itproger/main/templates/main/layout.html
@@ -24,6 +24,8 @@
             <a href="{% url 'about' %}"><li><i class="fa-regular fa-users"></i>Про нас</li></a>
             <a href="{% url 'news_home' %}"><li><i class="fa-regular fa-users"></i>Новости</li></a>
             <a href=""><li><i class="fa-solid fa-paper-plane"></i>Контакты</li></a>
+            <a href="{% url 'create' %}"><li><button class="btn btn-info">Кнопочка</button></li></a>
+
         </ul>
     </aside>
         <main>
