--- a/itproger/news/templates/news/news_home.html
+++ b/itproger/news/templates/news/news_home.html
@@ -3,7 +3,7 @@
 
 {% block content%}
 <div class="features">
-    <h1>{{ title }}</h1>
+    <h1>Страница новостей</h1>
     <p>Вообще пиздец основной да. Вообще пиздец основной да. Вообще пиздец основной да. Вообще пиздец основной да. Вообще пиздец основной да. Вообще пиздец основной да. Вообще пиздец основной да. </p>
     <button class="btn btn-warning"> Yes </button>
 
